Bug 751444 - The About dialog's focus rings are barely visible in Nightly and Aurora builds. r=dao
UltraBlame original commit: 3b52d2f7382990ad6ec2545d099934e124edffb6

--- a/browser/branding/nightly/content/aboutDialog.css
+++ b/browser/branding/nightly/content/aboutDialog.css
@@ -116,6 +116,24 @@ fff
 important
 ;
 }
+.
+text
+-
+link
+:
+-
+moz
+-
+focusring
+{
+border
+-
+color
+:
+#
+fff
+;
+}
 #
 rightBox
 {
